--- a/src/App.css
+++ b/src/App.css
@@ -49,4 +49,21 @@ header {
 #APIResponse {
   font-weight: bolder;
   font-size: larger;
+} 
+
+nav ul{
+  margin: 0;
+  padding: 0;
+}
+
+nav ul li {
+  list-style-type: none;
+  display: inline-block;
+  padding: 5px 20px;
+}
+
+nav ul li a {
+  text-decoration: none;
+  color: white;
+  font-size: larger;
 }
