--- a/src/screens/forumFiles/sideMenu.css
+++ b/src/screens/forumFiles/sideMenu.css
@@ -1,7 +1,7 @@
 /* CSS for the SideMenu component */
 .side-menu {
   padding-top: 30px;
-  width: 20%;
+  /* width: 15%; */
   padding-left: 30px;
   padding-right: 10px;
   border-right: thin solid #0557fa;
