--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,14 @@
   text-align: center;
 }
 
+body {
+  overflow: hidden;
+}
+
+::-webkit-scrollbar{
+  display: none;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
