--- a/src/screens/forumFiles/SecondaryHeader.css
+++ b/src/screens/forumFiles/SecondaryHeader.css
@@ -5,7 +5,7 @@
   padding: 10px;
   background-color: white;
   width: 100%;
-  border-top: 2px solid #0557fa;
+  /* border-top: 2px solid #0557fa; */
 }
 
 .Forumlogo {
