--- a/src/screens/eventsFiles/EventDetails.css
+++ b/src/screens/eventsFiles/EventDetails.css
@@ -14,6 +14,10 @@
     display: none !important;
 }
 
+.image-gallery-fullscreen-button {
+    display: none;
+}
+
 .image-overlay {
     position: fixed;
     top: 0;
@@ -34,6 +38,21 @@
     max-width: 100%;
     max-height: 100%;
     box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.75);
-    /* Add a shadow to the image */
     cursor: pointer;
+}
+
+h2 {
+    text-align: center;
+}
+
+.data-box {
+    padding: 20px;
+}
+
+.eventDate,
+.eventPrice,
+.eventLocation,
+.eventDescription {
+    font: 20px inter;
+    text-align: center;
 }
