--- a/src/screens/forumFiles/CreatePost.css
+++ b/src/screens/forumFiles/CreatePost.css
@@ -1,17 +1,14 @@
-/* CreatePost.css */
-
 .create-post-container {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    /* Center vertically */
     align-items: center;
-    height: 100vh;
-    /* 100% viewport height */
     padding: 20px;
     background-color: #f4f4f4;
     border-radius: 8px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    overflow-y: scroll;
+    max-height: calc(100vh - 200px);
 }
 
 h2 {
@@ -40,16 +37,11 @@ label {
     border-radius: 4px;
 }
 
-/* Center the button horizontally at the bottom */
-.submit-button-container {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-    /* Full width within the container */
-}
+
 
 .submit-button {
     background-color: #007bff;
+    border: 2px solid #007bff;
     color: #fff;
     border: none;
     border-radius: 4px;
@@ -61,5 +53,21 @@ label {
 }
 
 .submit-button:hover {
+    background-color: #0056b3;
+    border: 2px solid black;
+}
+
+.back-button {
+    padding: 8px 30px;
+    background-color: #007bff;
+    color: white;
+    border: 2px solid #007bff;
+    border-radius: 4px;
+    align-self: flex-start;
+    margin-top: 20px;
+}
+
+.back-button:hover {
+    border: 2px solid black;
     background-color: #0056b3;
 }
