--- a/src/screens/forumFiles/SecondaryHeader.css
+++ b/src/screens/forumFiles/SecondaryHeader.css
@@ -44,6 +44,24 @@
   color: white;
   padding: 10px 20px;
   border-radius: 5px;
+  margin-right: 5px;
+  border: 2px solid #0557fa;
+  font-size: medium;
+
+}
+
+.create-post-button {
+  background-color: #0557fa;
+  color: white;
+  padding: 10px;
+  border-radius: 5px;
   margin-right: 30px;
-  border: none;
+  border: 2px solid #0557fa;
+  text-decoration: none;
+  font-size: medium;
+}
+
+.create-post-button:hover,
+.my-chats-button:hover {
+  border: 2px solid black ;
 }
