--- a/src/screens/datingFiles/dating.css
+++ b/src/screens/datingFiles/dating.css
@@ -2,6 +2,49 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: calc(100vh - 60px); 
-    background: rgb(42, 42, 42); 
+    background: rgb(42, 42, 42);
+}
+
+.top-buttons {
+    display: flex;
+    justify-content: center;
+    padding: 10px 0;
+}
+
+.button {
+    background: none;
+    border: none;
+    color: white;
+    font-size: 40px;
+    margin: 0 10px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+
+.button:hover {
+    border: none;
+    border-radius: 5px;
+    background-color: rgba(255, 255, 255, 0.1);
+}
+
+.crown-icon {
+    color: gold;
+}
+
+.heart-icon {
+    color: red;
+}
+
+.chat-icon {
+    color: blue;
+}
+
+.full-box {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background: rgb(42, 42, 42);
+    height: calc(100vh - 60px);
 }
