--- a/src/screens/forumFiles/forumFeed.css
+++ b/src/screens/forumFiles/forumFeed.css
@@ -130,3 +130,10 @@
 .downvoted {
   color: red; /* or any color you want to represent downvote */
 }
+.time-ago {
+  font-size: 0.8em;
+  color: #aaa;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
