--- a/src/screens/eventsFiles/EventCard.css
+++ b/src/screens/eventsFiles/EventCard.css
@@ -1,6 +1,6 @@
 .event-card-container .events-container {
   width: 30%;
-  height: 90vh;
+  height: calc(100vh + 145px);
   overflow-y: auto;
   min-width: 300px;
   padding: 20px 0;
@@ -12,7 +12,7 @@
   overflow-y: auto;
   border: 1px solid #ccc;
   border-radius: 10px;
-  margin-bottom: 20px;
+  margin-bottom: 5px;
   padding: 15px;
   background-color: white;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -34,7 +34,7 @@
   width: 250px; /* Adjusted width */
   height: 100%;
   object-fit: cover;
-  margin-right: 15px;
+  margin-right: 10px;
   border-radius: 5px;
 }
 
@@ -42,21 +42,21 @@
   flex: 1; /* Allows details to occupy remaining space */
   display: flex;
   flex-direction: column;
-  justify-content: space-between; /* Distributes the details evenly */
+  /* justify-content: space-between;  */
 }
 
 .event-card-container .event-title {
   font-size: 20px;
   font-weight: bold;
-  margin-bottom: 10px;
+  /* margin-bottom: 10px; */
   color: #333;
 }
 
 .event-card-container .event-date,
-.event-price,
-.event-location,
-.event-time {
-  margin-bottom: 5px;
+.event-card-container .event-price,
+.event-card-container .event-location,
+.event-card-container .event-time {
+  margin-bottom: 0px;
   font-size: 14px;
   color: #777;
 }
