--- a/src/screens/forumFiles/CreatePost.css
+++ b/src/screens/forumFiles/CreatePost.css
@@ -1,19 +1,19 @@
 .create-post-container {
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
     padding: 20px;
     background-color: #f4f4f4;
     border-radius: 8px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-    overflow-y: scroll;
-    max-height: calc(100vh - 200px);
+    overflow-y: auto; 
+    height: 100vh;
 }
 
 h2 {
     font-size: 24px;
     margin-bottom: 20px;
+    margin-top: 0;
 }
 
 .input-group {
@@ -36,8 +36,6 @@ label {
     border: 1px solid #ccc;
     border-radius: 4px;
 }
-
-
 
 .submit-button {
     background-color: #007bff;
@@ -70,4 +68,8 @@ label {
 .back-button:hover {
     border: 2px solid black;
     background-color: #0056b3;
+}
+
+.description {
+    height: fit-content;
 }
