--- a/src/screens/forumFiles/SecondaryHeader.css
+++ b/src/screens/forumFiles/SecondaryHeader.css
@@ -39,29 +39,22 @@
   outline: none;
 }
 
-.my-chats-button {
-  background-color: #0557fa;
-  color: white;
-  padding: 10px 20px;
-  border-radius: 5px;
-  margin-right: 5px;
-  border: 2px solid #0557fa;
-  font-size: medium;
-
-}
-
+.my-posts-button,
 .create-post-button {
-  background-color: #0557fa;
+  background: linear-gradient(to right, #0557fa, #0575fa);
   color: white;
-  padding: 10px;
-  border-radius: 5px;
-  margin-right: 30px;
-  border: 2px solid #0557fa;
+  padding: 10px 25px;
+  border-radius: 25px;
+  border: none;
+  font-size: 16px;
+  margin-right: 10px;
   text-decoration: none;
-  font-size: medium;
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 
 .create-post-button:hover,
-.my-chats-button:hover {
-  border: 2px solid black ;
+.my-posts-button:hover {
+  background: linear-gradient(to right, #0575fa, #0557fa);
 }
