--- a/src/screens/eventsFiles/EventCard.css
+++ b/src/screens/eventsFiles/EventCard.css
@@ -1,5 +1,6 @@
 .event-card-container .events-container {
-  width: 30%;
+  width: 35%;
+  min-width: 350px;
   height: calc(100vh + 145px);
   overflow-y: auto;
   min-width: 300px;
@@ -13,7 +14,7 @@
   border: 1px solid #ccc;
   border-radius: 10px;
   margin-bottom: 5px;
-  padding: 15px;
+  padding: 20px;
   background-color: white;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   transition: all 0.3s ease-out;
@@ -31,8 +32,8 @@
 }
 
 .event-card-container .event-thumbnail img {
-  width: 250px; /* Adjusted width */
-  height: 100%;
+  width: 180px; /* Adjusted width for square */
+  height: 180px;
   object-fit: cover;
   margin-right: 10px;
   border-radius: 5px;
@@ -46,7 +47,7 @@
 }
 
 .event-card-container .event-title {
-  font-size: 20px;
+  font-size: 24px;
   font-weight: bold;
   /* margin-bottom: 10px; */
   color: #333;
@@ -57,7 +58,7 @@
 .event-card-container .event-location,
 .event-card-container .event-time {
   margin-bottom: 0px;
-  font-size: 14px;
+  font-size: 16px;
   color: #777;
 }
 
