--- a/src/screens/eventsFiles/EventDetails.css
+++ b/src/screens/eventsFiles/EventDetails.css
@@ -1,9 +1,12 @@
 @import "~react-image-gallery/styles/css/image-gallery.css";
 
 .event-details-container {
-  width: 100%;
+  width: 70%; /* Adjust this value as needed */
+  max-width: 800px; /* Optional: set a max-width */
   overflow: auto;
   height: 90vh;
+  margin-left: auto; /* Centering it horizontally */
+  margin-right: auto;
 }
 
 .image-gallery-thumbnails-wrapper {
@@ -25,15 +28,12 @@
   width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.7);
-  /* Add a semi-transparent black background */
   display: flex;
   justify-content: center;
   align-items: center;
   z-index: 999;
-  /* Ensure the overlay appears above other content */
 }
 
-/* Style the image inside the overlay */
 .image-overlay img {
   max-width: 100%;
   max-height: 100%;
